@@ -1,3 +1,8 @@
+2020-02-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/wpg.c Check for exception in image.
+
+
 2020-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/command.c (VersionCommand): Add Google perftools tcmalloc
